# selector4nix

./: .envrc  Cargo.toml  README.md  default.nix  flake.nix  garnix.yaml  rust-toolchain.toml  shell.nix
.github/: renovate.json
.github/workflows/: release.yml  system-test.yml
components/selector4nix-actor/src/actor/: address.rs  mod.rs  pre.rs  runner.rs
components/selector4nix-actor/src/registry/: builder.rs  container.rs
components/selector4nix-db/: Cargo.toml
components/selector4nix-db/src/: lib.rs
components/selector4nix-db/src/cache_kv/: inner.rs  kv.rs  mod.rs
docs/: configuration.md  credentials.md  selector4nix.example.toml
nix/: darwin-module.nix  home-manager-module.nix  module-common.nix  nixos-module.nix  package.nix  source.nix
nix/flake/: devshell.nix  inputs.nix  module.nix  overlay.nix  package.nix
nix/flake/dev/: default.nix  devshell.nix  flake.nix
nix/modules/: common.nix  darwin.nix  home-manager.nix  nixos.nix
src/: bootstrap.rs  cli.rs  lib.rs  main.rs
src/api/: error.rs  mod.rs  router.rs  state.rs
src/api/handlers/: cache_info.rs  health.rs  index.html  index.rs  mod.rs  nar.rs  nar_info.rs  substituter.rs
src/application/: error.rs  mod.rs
src/application/nar/: error_impl.rs  mod.rs  usecase.rs
src/application/nar/actor/: mod.rs  runner.rs
src/application/nar/usecase/: mod.rs  resolution.rs  streaming.rs
src/application/nar_file/: error_impl.rs
src/application/nar_file/actor/: mod.rs  runner.rs
src/application/nar_file/usecase/: mod.rs  streaming.rs
src/application/nar_info/: error_impl.rs
src/application/nar_info/actor/: runner.rs
src/application/nar_info/usecase/: mod.rs  resolution.rs
src/application/substituter/: error_impl.rs  mod.rs
src/application/substituter/actor/: runner.rs
src/application/substituter/usecase/: mod.rs  query.rs
src/domain/: mod.rs
src/domain/common/: expire_at.rs  mod.rs  passthrough_headers.rs  url.rs
src/domain/nar/port/: nar_info_provider.rs
src/domain/nar/service/: mod.rs  nar_resolution.rs  resolution.rs
src/domain/nar_file/: mod.rs  repository.rs  service.rs
src/domain/nar_file/model/: mod.rs  nar_file.rs  nar_file_key.rs  nar_file_location.rs
src/domain/nar_file/port/: mod.rs  nar_stream_provider.rs
src/domain/nar_file/service/: nar_file.rs
src/domain/nar_info/: mod.rs  repository.rs  service.rs
src/domain/nar_info/index/: mod.rs  nar_file.rs
src/domain/nar_info/model/: mod.rs  nar_file_name.rs  nar_info.rs  nar_info_data.rs  nar_info_resolution.rs  proxy_nar_info_data.rs  store_path_hash.rs  upstream_nar_info_data.rs
src/domain/nar_info/port/: mod.rs  nar_info_provider.rs  nar_stream_provider.rs
src/domain/nar_info/service/: resolution.rs  util.rs
src/domain/substituter/: mod.rs  repository.rs  service.rs
src/domain/substituter/model/: availability.rs  mod.rs  priority.rs  substituter.rs  substituter_meta.rs  url.rs
src/domain/substituter/service/: lifecycle.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: general_parsed.rs  general_raw.rs  mod.rs  parsed.rs
src/infrastructure/index/: mod.rs  nar_file.rs
src/infrastructure/provider/: mod.rs  nar_info_provider.rs  nar_stream_provider.rs  substituter_probing_provider.rs
src/infrastructure/repository/: mod.rs  nar_file.rs  nar_info.rs  substituter.rs
tests/integration/: config_test.rs  main.rs  nar_info_resolution_service_test.rs  nar_info_service_test.rs  nar_resolution_service_test.rs
tests/integration/fixture/: config.rs  mod.rs  nar.rs  nar_file.rs  nar_info.rs  substituter.rs
tests/integration/mock/: mod.rs  nar_info_provider.rs
tests/system/cache-persistence/: Cargo.toml
tests/system/common/: Cargo.toml
tests/system/common/src/: lib.rs  nix_serve.rs  nix_store.rs  selector4nix.rs
tests/system/nar-info-querying/: Cargo.toml  package.nix  run.sh
tests/system/nar-info-querying/src/: assertions.rs  cli.rs  context.rs  fixture.rs  main.rs
