[workspace]
members = [".", "components/*", "tests/system/*"]
default-members = ["."]

[workspace.dependencies]
anyhow = "1.0.102"
arc-swap = "1.9.1"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["http2"] }
bytes = "1.11.1"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6.2.1"
fastrand = "2.4.1"
futures = "0.3.32"
getset = "0.1.6"
moka = { version = "0.12.15", features = ["future"] }
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
snafu = "0.9.0"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "test-util"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-oslog = "0.3.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
tempfile = "3.27.0"
which = "7.0.3"

[package]
name = "selector4nix"
version = "0.5.0"
edition = "2024"
description = "Nix substituter proxy with parallel cache queries and latency-aware selection"
license = "GPL-3.0-or-later"
repository = "https://github.com/StarryReverie/selector4nix"
authors = ["Justin Chen"]
keywords = ["nix", "substituter", "proxy", "cache"]
categories = ["network-programming", "caching"]

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
getset = { workspace = true }
moka = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-oslog = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

selector4nix-actor = { path = "components/selector4nix-actor" }
