[package]
name = "selector4nix-system-test-cache-persistence"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
fastrand = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
which = { workspace = true }

selector4nix-system-test-common = { path = "../common" }
